# backend/internal/handler/server.go
@@ -32,3 +32,15 @@ func (s *Server) ListTodos(w http.ResponseWriter, r *http.Request) {
 func (s *Server) CreateTodo(w http.ResponseWriter, r *http.Request) {
 	s.todoHandler.CreateTodo(w, r)
 }
+
+// UpdateTodo delegates the request to the UpdateTodo method of the embedded TodoHandler.
+// This method signature matches the one generated by oapi-codegen for the '/todo/{todoId}' PUT endpoint.
+func (s *Server) UpdateTodo(w http.ResponseWriter, r *http.Request, todoId int32) {
+	s.todoHandler.UpdateTodo(w, r, todoId)
+}
+
+// DeleteTodo delegates the request to the DeleteTodo method of the embedded TodoHandler.
+// This method signature matches the one generated by oapi-codegen for the '/todo/{todoId}' DELETE endpoint.
+func (s *Server) DeleteTodo(w http.ResponseWriter, r *http.Request, todoId int32) {
+	s.todoHandler.DeleteTodo(w, r, todoId)
+}
